# well-logs

./: .gitignore  Makefile  README.md  lambda_function.py  pyproject.toml  requirements-dev.txt
.github/workflows/: basic-test.yml  complex-test.yml  deploy.yml
configs/: config.template  notification.json  pipeline.yaml  trust-policy.json
tests/: test_database.py
tests/.ipynb_checkpoints/: test_hash_log-checkpoint.py
tests/images/: 1.tiff  2.tiff
wells/: database.py  hash_log.py
